# RT-NOROS-VIORB

./: report.txt
LearnVIORB_NOROS/: CMakeLists.txt
LearnVIORB_NOROS/Examples/DeblurVIO/: Deblur.cpp
LearnVIORB_NOROS/Examples/MonoVIO/: deblur  orb_with_rovio.cpp  rovio_noros.cpp  runeth  runeth.cc  vio  vio.cc  zr300_rovio_orb.cpp
LearnVIORB_NOROS/Examples/Monocular/: mono_euroc.cc
LearnVIORB_NOROS/Examples/ROS/ORB_VIO/src/: ros_vio.cc  rosvio
LearnVIORB_NOROS/cmake_modules/: FindLWF.cmake
LearnVIORB_NOROS/config/: eth.yaml  euroc.yaml  realsense.yaml
LearnVIORB_NOROS/config/zr300/: camera-information  realsense.yaml  rovio.info  zr300.yaml
LearnVIORB_NOROS/include/: FileReader.h  Frame.h  LocalMapping.h  MapDrawer.h  MapPoint.h  Optimizer.h  System.h  Tracking.h  Viewer.h
LearnVIORB_NOROS/include/rovio/: FeatureCoordinates.hpp  ImgUpdate.hpp  RovioFilter.hpp  RovioNode.hpp  featureTracker.hpp
LearnVIORB_NOROS/logs/: ZR300.INFO  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-153046.37670  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-153947.38709  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-154245.39314  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-154405.40028  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-154550.40200  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-154742.40782  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-154855.41407  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-163940.50207  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-172053.52525  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-172149.53093  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-172636.53757  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-173123.54459  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-173218.54678  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-173446.54847  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-173748.55495  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-180058.57060  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-180221.57656  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-180611.58477  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180406-180720.58567  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-143552.4797  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-144053.5300  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-145853.7201  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-145857.7242  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-145944.7737  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-153752.9795  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-154942.10574  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-155017.11067  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-160648.12774  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-160653.12849  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-160935.13451  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-161156.14028  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163328.16973  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163330.17009  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163425.17521  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163428.17558  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163533.18089  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163547.18133  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163637.18661  ZR300.ubuntu14045.zhuzunjie.log.INFO.20180407-163732.19185  (+132 more)
LearnVIORB_NOROS/pyplotscripts/: plotinit.py  plotnavstate.py
LearnVIORB_NOROS/results/: Pw.eps  Rwi.txt  biasa.eps  biasa.txt  biasg.eps  biasg.txt  condnum.eps  condnum.txt  gw.txt  scale.eps  scale.txt
LearnVIORB_NOROS/src/: FileReader.cc  Frame.cc  Initializer.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  System.cc  Tracking.cc  Viewer.cc
LearnVIORB_NOROS/src/IMU/: IMUPreintegrator.cpp  IMUPreintegrator.h  NavState.cpp  NavState.h  configparam.cpp  configparam.h  g2otypes.cpp  g2otypes.h
results/lab/: KeyFrameNavStateTrajectory.txt  Rwi.txt  biasa.txt  biasg.txt  condnum.txt  gw.txt  scale.txt
